needed to generate entity files for the sql_hr

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
-server.port=6667
+#server.servlet.context-path="/taco"
+server.port=5555
+#server.servlet.contextPath=/inventory
+server.servlet.contextPath=/hiring
+
+logging.level.org.org.springframework=debug
+spring.application.name=Mosh-Inventory-Database-Test
+
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/sql_inventory?allowPublicKeyRetrieval=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&autoReconnect=true&useSSL=false&noAccessToProcedureBodies=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/sql_inventory
+spring.datasource.url=jdbc:mysql://localhost:3306/sql_hr
+spring.datasource.username=root
+spring.datasource.password=ola24oluwa
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.id.new_generator_mappings = false
+spring.jpa.properties.hibernate.show_sql = true
+spring.jpa.properties.hibernate.format_sql = false
+
+#spring.devtools.add-properties=true
+spring.devtools.restart.enabled=true
